Create basic layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <div class="header">header
+            <div class="searchbar">
+                <input type="text">
+            </div>
+        </div>
+        <div class="sidebar">Dashboard
+            <ul class="tabs">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul class="tabs">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+        <div class="content">Your Projects</div>
+    </div>
 </body>
 </html>
