Complete Basic Layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <div class="searchbar">
                 <input type="text">
             </div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+            <div>Hi there, Morgan Oakley (@morgan)</div>
         </div>
         <div class="sidebar">Dashboard
             <ul class="tabs">
@@ -29,7 +33,27 @@
                 <li>Privacy</li>
             </ul>
         </div>
-        <div class="content">Your Projects</div>
+        <div class="content">
+            <div class="cards">
+                <div>Super Cool Project</div>
+                <div>Less Cool Project</div>
+                <div>Impossible App</div>
+                <div>Easy Peasy App</div>
+                <div>Ad Blocker</div>
+                <div>Money Maker</div>
+            </div>
+            <div class="announcements">Announcements
+                <div>Site Maintenance</div>
+                <div>Community Share Day</div>
+                <div>Updated Privacy Policy</div>
+            </div>
+            <div class="trending">trending
+                <div>@tegan</div>
+                <div>@morgan</div>
+                <div>@kendall</div>
+                <div>@alex</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
