Add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -9,28 +9,40 @@
 </head>
 <body>
     <div class="page">
-        <div class="header">header
+        <div class="header">
             <div class="searchbar">
                 <input type="text">
             </div>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
-            <div>Hi there, Morgan Oakley (@morgan)</div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+            <div class="greeting">
+                <div>Profile pic</div>
+                <div>Hi there,</div>
+                <div>Morgan Oakley (@morgan)</div>
+            </div>
+            <div class="login">
+                <div>bell</div>
+                <div>profile</div>
+                <div>Morgan Oakley</div>
+            </div>
         </div>
-        <div class="sidebar">Dashboard
+        <div class="sidebar">
+            <img src="collage.png">Dashboard
             <ul class="tabs">
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src=home.png>Home</li>
+                <li><img src=account-box.png>Profile</li>
+                <li><img src=message.png>Messages</li>
+                <li><img src=history.png>History</li>
+                <li><img src=calendar-check.png>Tasks</li>
+                <li><img src=account-group.png>Communities</li>
             </ul>
             <ul class="tabs">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src=cog.png>Settings</li>
+                <li><img src=help-circle.png>Support</li>
+                <li><img src=shield-lock.png>Privacy</li>
             </ul>
         </div>
         <div class="content">
