Add icons to header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="page">
         <div class="header">
             <div class="searchbar">
+                <img src="magnify.png">
                 <input type="text">
             </div>
             <div class="buttons">
@@ -24,7 +25,7 @@
                 <div>Morgan Oakley (@morgan)</div>
             </div>
             <div class="login">
-                <div>bell</div>
+                <div><img src=bell.png></div>
                 <div>profile</div>
                 <div>Morgan Oakley</div>
             </div>
