Add icons to body

--- a/index.html
+++ b/index.html
@@ -48,12 +48,36 @@
         </div>
         <div class="content">
             <div class="cards">
-                <div>Super Cool Project</div>
-                <div>Less Cool Project</div>
-                <div>Impossible App</div>
-                <div>Easy Peasy App</div>
-                <div>Ad Blocker</div>
-                <div>Money Maker</div>
+                <div>Super Cool Project
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
+                <div>Less Cool Project
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
+                <div>Impossible App
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
+                <div>Easy Peasy App
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
+                <div>Ad Blocker
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
+                <div>Money Maker
+                    <img src="star-plus.png">
+                    <img src="eye-plus.png">
+                    <img src="file-tree.png">
+                </div>
             </div>
             <div class="announcements">Announcements
                 <div>Site Maintenance</div>
