Add profile pictures

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <button>Share</button>
             </div>
             <div class="greeting">
-                <div>Profile pic</div>
+                <div><img src=cat.jpg class="profilePicMain"></div>
                 <div>Hi there,</div>
                 <div>Morgan Oakley (@morgan)</div>
             </div>
             <div class="login">
                 <div><img src=bell.png></div>
-                <div>profile</div>
+                <div><img src="cat.jpg" class="profilePic"></div>
                 <div>Morgan Oakley</div>
             </div>
         </div>
@@ -85,12 +85,40 @@
                 <div>Updated Privacy Policy</div>
             </div>
             <div class="trending">trending
-                <div>@tegan</div>
-                <div>@morgan</div>
-                <div>@kendall</div>
-                <div>@alex</div>
+                <div>@tegan
+                    <img src="dog.jpg" class="profilePic">
+                </div>
+                <div>@morgan
+                    <img src="cat.jpg" class="profilePic">
+                </div>
+                <div>@kendall
+                    <img src="octopus.jpg" class="profilePic">
+                </div>
+                <div>@alex
+                    <img src="penguin.jpg" class="profilePic">
+                </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+
+<!--photo creds:
+Photo by user at Unsplash
+
+    cat
+user:https://unsplash.com/@cedric_photography
+image:https://unsplash.com/photos/IuJc2qh2TcA
+
+dog
+user:https://unsplash.com/@toshilepug
+image:https://unsplash.com/photos/lySzv_cqxH8
+
+octopus
+user:https://unsplash.com/@mahdibafande
+image: https://unsplash.com/photos/qgJ1rt7TeeY
+
+penguin
+user:https://unsplash.com/@ecraw
+image:https://unsplash.com/photos/mhUPquAelmU
+-->
