Complete basic layout

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
                 <button>Share</button>
             </div>
             <div class="greeting">
-                <div><img src=cat.jpg class="profilePicMain"></div>
-                <div>Hi there,</div>
-                <div>Morgan Oakley (@morgan)</div>
+                <div class="greetingImg">
+                    <div><img src=cat.jpg class="profilePicMain"></div>
+                </div>
+                <div class="greetingTxt">
+                    <div>Hi there,</div>
+                    <div>Morgan Oakley (@morgan)</div>
+                </div>
             </div>
             <div class="login">
                 <div><img src=bell.png></div>
@@ -48,54 +52,59 @@
         </div>
         <div class="content">
             <div class="cards">
-                <div>Super Cool Project
+                <div class="yourProjects">Your Projects</div>
+                <div class="superCool">Super Cool Project
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div>Less Cool Project
+                <div class="lessCool">Less Cool Project
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div>Impossible App
+                <div class="impossible">Impossible App
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div>Easy Peasy App
+                <div class="easy">Easy Peasy App
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div>Ad Blocker
+                <div class="adBlocker">Ad Blocker
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div>Money Maker
+                <div class="money">Money Maker
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
             </div>
             <div class="announcements">Announcements
-                <div>Site Maintenance</div>
-                <div>Community Share Day</div>
-                <div>Updated Privacy Policy</div>
+                <div class="announcementContent">
+                    <div>Site Maintenance</div>
+                    <div>Community Share Day</div>
+                    <div>Updated Privacy Policy</div>
+                </div>
             </div>
-            <div class="trending">trending
-                <div>@tegan
-                    <img src="dog.jpg" class="profilePic">
-                </div>
-                <div>@morgan
-                    <img src="cat.jpg" class="profilePic">
-                </div>
-                <div>@kendall
-                    <img src="octopus.jpg" class="profilePic">
-                </div>
-                <div>@alex
-                    <img src="penguin.jpg" class="profilePic">
+            <div class="trending">Trending
+                <div class="trendingContent">
+                    <div>@tegan
+                        <img src="dog.jpg" class="profilePic">
+                    </div>
+                    <div>@morgan
+                        <img src="cat.jpg" class="profilePic">
+                    </div>
+                    <div>@kendall
+                        <img src="octopus.jpg" class="profilePic">
+                    </div>
+                    <div>@alex
+                        <img src="penguin.jpg" class="profilePic">
+                    </div>
                 </div>
             </div>
         </div>
