--- a/index.html
+++ b/index.html
@@ -53,32 +53,60 @@
         <div class="content">
             <div class="cards">
                 <div class="yourProjects">Your Projects</div>
-                <div class="superCool">Super Cool Project
+                <div class="superCool">
+                    <div class="cardTitle">Super Cool Project</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor risus augue,
+                        id varius felis congue vel. Morbi quis tellus fermentum, viverra dui eget, 
+                        dignissim arcu.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div class="lessCool">Less Cool Project
+                <div class="lessCool">
+                    <div class="cardTitle">Less Cool Project</div>
+                    <div>Cras sit amet fringilla dui. Fusce eget urna rutrum, vulputate diam vitae, facilisis 
+                        lorem. Duis id finibus eros, eu laoreet dolor. Morbi sit amet dolor eget tortor 
+                        finibus viverra. Curabitur ut ligula ligula. Nullam aliquet dapibus arcu, nec 
+                        malesuada turpis porta vitae.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div class="impossible">Impossible App
+                <div class="impossible">
+                    <div class="cardTitle">Impossible App</div>
+                    <div>Curabitur volutpat facilisis sapien. Aliquam sit amet fermentum nisl. Nunc 
+                        ullamcorper at libero in imperdiet. Quisque faucibus ligula vel velit 
+                        sodales scelerisque.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div class="easy">Easy Peasy App
+                <div class="easy">
+                    <div class="cardTitle">Easy Peasy App</div>
+                    <div> Duis at malesuada nisl. Maecenas ac mauris nibh. Phasellus quis urna non nisi 
+                        rhoncus fermentum. Duis cursus arcu risus, id consequat risus porttitor ac. 
+                        Fusce in hendrerit velit..</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div class="adBlocker">Ad Blocker
+                <div class="adBlocker">
+                    <div class="cardTitle">Ad Blocker</div>
+                    <div> Sed pharetra, dolor non elementum sollicitudin, 
+                        sapien orci suscipit mi, sit amet cursus odio massa nec enim. Suspendisse quis 
+                        ante sollicitudin, bibendum eros quis, dictum nisl. Duis tincidunt nibh ac 
+                        augue vulputate euismod</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
-                <div class="money">Money Maker
+                <div class="money">
+                    <div class="cardTitle">Money Maker</div>
+                    <div>Aenean turpis nibh, mattis ac vehicula nec, placerat in augue. Proin semper ante 
+                        fringilla mauris semper pulvinar. Quisque a orci sit amet sem mattis mattis. Nunc 
+                        elementum eleifend nunc, tincidunt scelerisque nunc molestie vel. Praesent 
+                        hendrerit vulputate risus, nec scelerisque tellus pulvinar vitae. Ut viverra erat 
+                        nec sagittis tempor.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -86,9 +114,21 @@
             </div>
             <div class="announcements">Announcements
                 <div class="announcementContent">
-                    <div>Site Maintenance</div>
-                    <div>Community Share Day</div>
-                    <div>Updated Privacy Policy</div>
+                    <div>
+                        <div class="cardTitle">Site Maintenance</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum tellus 
+                            et justo dapibus aliquet. Integer ac augue lorem.</div>
+                    </div>
+                    <div>
+                        <div class="cardTitle">Community Share Day</div>
+                        <div>Cras id turpis ut urna feugiat sodales mollis quis velit. Nam eu lobortis 
+                            dolor, quis ultrices tellus.</div>
+                    </div>
+                    <div>
+                        <div class="cardTitle">Updated Privacy Policy</div>
+                        <div>Aenean sollicitudin eleifend quam, ut commodo lectus accumsan at. Proin 
+                            convallis fermentum commodo. Etiam id felis nisi.</div>
+                    </div>
                 </div>
             </div>
             <div class="trending">Trending
