--- a/index.html
+++ b/index.html
@@ -112,38 +112,40 @@
                     <img src="file-tree.png">
                 </div>
             </div>
-            <div class="announcements">Announcements
-                <div class="announcementContent">
-                    <div>
-                        <div class="cardTitle">Site Maintenance</div>
-                        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum tellus 
+            <div class="rightSide">
+                <div class="announcements">Announcements
+                    <div class="announcementContent">
+                        <div>
+                            <div class="cardTitle">Site Maintenance</div>
+                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum tellus 
                             et justo dapibus aliquet. Integer ac augue lorem.</div>
-                    </div>
-                    <div>
-                        <div class="cardTitle">Community Share Day</div>
-                        <div>Cras id turpis ut urna feugiat sodales mollis quis velit. Nam eu lobortis 
+                        </div>
+                        <div>
+                            <div class="cardTitle">Community Share Day</div>
+                            <div>Cras id turpis ut urna feugiat sodales mollis quis velit. Nam eu lobortis 
                             dolor, quis ultrices tellus.</div>
-                    </div>
-                    <div>
-                        <div class="cardTitle">Updated Privacy Policy</div>
-                        <div>Aenean sollicitudin eleifend quam, ut commodo lectus accumsan at. Proin 
+                        </div>
+                        <div>
+                            <div class="cardTitle">Updated Privacy Policy</div>
+                            <div>Aenean sollicitudin eleifend quam, ut commodo lectus accumsan at. Proin 
                             convallis fermentum commodo. Etiam id felis nisi.</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="trending">Trending
-                <div class="trendingContent">
-                    <div>@tegan
-                        <img src="dog.jpg" class="profilePic">
-                    </div>
-                    <div>@morgan
-                        <img src="cat.jpg" class="profilePic">
-                    </div>
-                    <div>@kendall
-                        <img src="octopus.jpg" class="profilePic">
-                    </div>
-                    <div>@alex
-                        <img src="penguin.jpg" class="profilePic">
+                <div class="trending">Trending
+                    <div class="trendingContent">
+                        <div>@tegan
+                            <img src="dog.jpg" class="profilePic">
+                        </div>
+                        <div>@morgan
+                            <img src="cat.jpg" class="profilePic">
+                        </div>
+                        <div>@kendall
+                            <img src="octopus.jpg" class="profilePic">
+                        </div>
+                        <div>@alex
+                            <img src="penguin.jpg" class="profilePic">
+                        </div>
                     </div>
                 </div>
             </div>
