Complete sidebar layout

--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@
             </div>
         </div>
         <div class="sidebar">
-            <img src="collage.png">Dashboard
+            <div class="logo">
+                <img src="collage.png">
+                <div>Dashboard</div>
+            </div>
             <ul class="tabs">
-                <li><img src=home.png>Home</li>
-                <li><img src=account-box.png>Profile</li>
-                <li><img src=message.png>Messages</li>
-                <li><img src=history.png>History</li>
-                <li><img src=calendar-check.png>Tasks</li>
-                <li><img src=account-group.png>Communities</li>
+                <li class="sidebarTab"><img src=home.png class="sidebarImg">Home</li>
+                <li class="sidebarTab"><img src=account-box.png class="sidebarImg">Profile</li>
+                <li class="sidebarTab"><img src=message.png class="sidebarImg">Messages</li>
+                <li class="sidebarTab"><img src=history.png class="sidebarImg">History</li>
+                <li class="sidebarTab"><img src=calendar-check.png class="sidebarImg">Tasks</li>
+                <li class="sidebarTab communities"><img src=account-group.png class="sidebarImg">Communities</li>
             </ul>
             <ul class="tabs">
-                <li><img src=cog.png>Settings</li>
-                <li><img src=help-circle.png>Support</li>
-                <li><img src=shield-lock.png>Privacy</li>
+                <li class="sidebarTab"><img src=cog.png class="sidebarImg">Settings</li>
+                <li class="sidebarTab"><img src=help-circle.png class="sidebarImg">Support</li>
+                <li class="sidebarTab"><img src=shield-lock.png class="sidebarImg">Privacy</li>
             </ul>
         </div>
         <div class="content">
@@ -56,8 +59,7 @@
                 <div class="superCool">
                     <div class="cardTitle">Super Cool Project</div>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor risus augue,
-                        id varius felis congue vel. Morbi quis tellus fermentum, viverra dui eget, 
-                        dignissim arcu.</div>
+                        id varius felis congue vel. Morbi quis tellus fermentum.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -65,9 +67,7 @@
                 <div class="lessCool">
                     <div class="cardTitle">Less Cool Project</div>
                     <div>Cras sit amet fringilla dui. Fusce eget urna rutrum, vulputate diam vitae, facilisis 
-                        lorem. Duis id finibus eros, eu laoreet dolor. Morbi sit amet dolor eget tortor 
-                        finibus viverra. Curabitur ut ligula ligula. Nullam aliquet dapibus arcu, nec 
-                        malesuada turpis porta vitae.</div>
+                        lorem. Duis id finibus eros, eu laoreet dolor. Morbi sit amet.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -75,8 +75,7 @@
                 <div class="impossible">
                     <div class="cardTitle">Impossible App</div>
                     <div>Curabitur volutpat facilisis sapien. Aliquam sit amet fermentum nisl. Nunc 
-                        ullamcorper at libero in imperdiet. Quisque faucibus ligula vel velit 
-                        sodales scelerisque.</div>
+                        ullamcorper at libero in imperdiet. Quisque faucibus ligula vel velit.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -84,8 +83,7 @@
                 <div class="easy">
                     <div class="cardTitle">Easy Peasy App</div>
                     <div> Duis at malesuada nisl. Maecenas ac mauris nibh. Phasellus quis urna non nisi 
-                        rhoncus fermentum. Duis cursus arcu risus, id consequat risus porttitor ac. 
-                        Fusce in hendrerit velit..</div>
+                        rhoncus fermentum. Duis cursus arcu risus, id consequat risus porttitor.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -93,9 +91,7 @@
                 <div class="adBlocker">
                     <div class="cardTitle">Ad Blocker</div>
                     <div> Sed pharetra, dolor non elementum sollicitudin, 
-                        sapien orci suscipit mi, sit amet cursus odio massa nec enim. Suspendisse quis 
-                        ante sollicitudin, bibendum eros quis, dictum nisl. Duis tincidunt nibh ac 
-                        augue vulputate euismod</div>
+                        sapien orci suscipit mi, sit amet cursus odio massa.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
@@ -103,17 +99,15 @@
                 <div class="money">
                     <div class="cardTitle">Money Maker</div>
                     <div>Aenean turpis nibh, mattis ac vehicula nec, placerat in augue. Proin semper ante 
-                        fringilla mauris semper pulvinar. Quisque a orci sit amet sem mattis mattis. Nunc 
-                        elementum eleifend nunc, tincidunt scelerisque nunc molestie vel. Praesent 
-                        hendrerit vulputate risus, nec scelerisque tellus pulvinar vitae. Ut viverra erat 
-                        nec sagittis tempor.</div>
+                        fringilla mauris.</div>
                     <img src="star-plus.png">
                     <img src="eye-plus.png">
                     <img src="file-tree.png">
                 </div>
             </div>
             <div class="rightSide">
-                <div class="announcements">Announcements
+                <div class="announcements">
+                    <div class="announcementTitle">Announcements</div>
                     <div class="announcementContent">
                         <div>
                             <div class="cardTitle">Site Maintenance</div>
@@ -132,7 +126,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="trending">Trending
+                <div class="trending">
+                    <div class="trendingTitle">Trending</div>
                     <div class="trendingContent">
                         <div>@tegan
                             <img src="dog.jpg" class="profilePic">
