--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="searchbar">
                 <img src="magnify.png">
-                <input type="text">
+                <input type="text" id="text" style="width: 400px">
             </div>
             <div class="buttons">
                 <button>New</button>
@@ -24,8 +24,8 @@
                     <div><img src=cat.jpg class="profilePicMain"></div>
                 </div>
                 <div class="greetingTxt">
-                    <div>Hi there,</div>
-                    <div>Morgan Oakley (@morgan)</div>
+                    <div class="hello">Hi there,</div>
+                    <div class="morgan">Morgan Oakley (@morgan)</div>
                 </div>
             </div>
             <div class="login">
