Complete main body content

--- a/index.html
+++ b/index.html
@@ -60,49 +60,61 @@
                     <div class="cardTitle">Super Cool Project</div>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor risus augue,
                         id varius felis congue vel. Morbi quis tellus fermentum.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
                 <div class="lessCool">
                     <div class="cardTitle">Less Cool Project</div>
                     <div>Cras sit amet fringilla dui. Fusce eget urna rutrum, vulputate diam vitae, facilisis 
                         lorem. Duis id finibus eros, eu laoreet dolor. Morbi sit amet.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
                 <div class="impossible">
                     <div class="cardTitle">Impossible App</div>
                     <div>Curabitur volutpat facilisis sapien. Aliquam sit amet fermentum nisl. Nunc 
                         ullamcorper at libero in imperdiet. Quisque faucibus ligula vel velit.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
                 <div class="easy">
                     <div class="cardTitle">Easy Peasy App</div>
                     <div> Duis at malesuada nisl. Maecenas ac mauris nibh. Phasellus quis urna non nisi 
                         rhoncus fermentum. Duis cursus arcu risus, id consequat risus porttitor.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
                 <div class="adBlocker">
                     <div class="cardTitle">Ad Blocker</div>
                     <div> Sed pharetra, dolor non elementum sollicitudin, 
                         sapien orci suscipit mi, sit amet cursus odio massa.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
                 <div class="money">
                     <div class="cardTitle">Money Maker</div>
                     <div>Aenean turpis nibh, mattis ac vehicula nec, placerat in augue. Proin semper ante 
                         fringilla mauris.</div>
-                    <img src="star-plus.png">
-                    <img src="eye-plus.png">
-                    <img src="file-tree.png">
+                    <div class="cardImg">
+                        <img src="star-plus.png">
+                        <img src="eye-plus.png">
+                        <img src="file-tree.png">
+                    </div>
                 </div>
             </div>
             <div class="rightSide">
