Complete announcements section

--- a/index.html
+++ b/index.html
@@ -123,18 +123,21 @@
                     <div class="announcementContent">
                         <div>
                             <div class="cardTitle">Site Maintenance</div>
-                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum tellus 
-                            et justo dapibus aliquet. Integer ac augue lorem.</div>
+                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</div>
+                        </div>
+                        <div>
+                            <div class="divider">______________________</div>
                         </div>
                         <div>
                             <div class="cardTitle">Community Share Day</div>
-                            <div>Cras id turpis ut urna feugiat sodales mollis quis velit. Nam eu lobortis 
-                            dolor, quis ultrices tellus.</div>
+                            <div>Cras id turpis ut urna feugiat sodales mollis quis velit...</div>
+                        </div>
+                        <div>
+                            <div class="divider">______________________</div>
                         </div>
                         <div>
                             <div class="cardTitle">Updated Privacy Policy</div>
-                            <div>Aenean sollicitudin eleifend quam, ut commodo lectus accumsan at. Proin 
-                            convallis fermentum commodo. Etiam id felis nisi.</div>
+                            <div>Aenean sollicitudin eleifend quam, ut commodo lectus accumsan at...</div>
                         </div>
                     </div>
                 </div>
