Complete trending section

--- a/index.html
+++ b/index.html
@@ -144,17 +144,33 @@
                 <div class="trending">
                     <div class="trendingTitle">Trending</div>
                     <div class="trendingContent">
-                        <div>@tegan
+                        <div class="tegan">
                             <img src="dog.jpg" class="profilePic">
+                            <div>
+                                <div>@tegan</div>
+                                <div class="trendingText">Less Cool Project</div>
+                            </div>
                         </div>
-                        <div>@morgan
+                        <div class="morganTrending">
                             <img src="cat.jpg" class="profilePic">
+                            <div>
+                                <div>@morgan</div>
+                                <div class="trendingText">Super Cool Project</div>
+                            </div>
                         </div>
-                        <div>@kendall
+                        <div class="kendall">
                             <img src="octopus.jpg" class="profilePic">
+                            <div>
+                                <div>@kendall</div>
+                                <div class="trendingText">Easy Peasy App</div>
+                            </div>
                         </div>
-                        <div>@alex
+                        <div class="penguin">
                             <img src="penguin.jpg" class="profilePic">
+                            <div>
+                                <div>@alex</div>
+                                <div class="trendingText">Money Maker</div>
+                            </div>
                         </div>
                     </div>
                 </div>
